<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_tv_singup"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_et_email"
        android:layout_margin="@dimen/et_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/ShapeAppearance.MaterialComponents.LargeComponent"
            android:textSize="@dimen/et_text_size"
            android:padding="@dimen/et_padding"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/et_margin"
        android:hint="@string/reg_et_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/et_padding"
            android:textAppearance="@style/ShapeAppearance.MaterialComponents.LargeComponent"
            android:textSize="@dimen/et_text_size" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/reg_btn_singUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn_singup" />

    <TextView
        android:id="@+id/reg_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_tv_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


</LinearLayout>